# tasque

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
src/tasque/: communicator.py  models.py  std_redirector.py  tasque_executor.py  tasque_function_task.py  tasque_parser.py  tasque_sh_task.py  tasque_subprocess_task.py  tasque_task.py  util.py
