[metadata]
name = tasque
version = 0.0.1
url = https://github.com/hrukalive/tasque
description = Pipeline executor for both functions and subprocesses tasks in Python
long_description = file: README.md
keywords = python, pipeline, async
classifiers = 
	Programming Language :: Python :: 3

[options]
include_package_data = True
python_requires = >= 3.9

[options.packages.find]
where=src

[egg_info]
tag_build = 
tag_date = 0
